[package]
name = "ESP32-Decawave-RTLS-Prototype-for-Partner"
version = "0.0.1"
authors = ["jjpark@jltech.co.kr"]
categories = ["embedded", "rtls"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = ""
license = "Copyright @jltech lab 2022"
readme = "README.md"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
# native = ["esp-idf-sys/native"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.28.3", features = ["binstart"] }
embedded-svc = "0.15.4"
esp-idf-svc = "0.34.1"
esp-idf-hal = "0.30.0"
embedded-hal = "0.2"
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
ssd1306 = "0.7"
smol = "1.2"
# bindgen
# cc

[build-dependencies]
embuild = "0.27"
anyhow = "1"

