[package]
name = "rtls-demo-jltech"
version = "0.0.1"
authors = ["jjpark"]
edition = "2018"
categories = ["embedded"]
keywords = ["embedded", "rtls", "uwb", "esp32"]
description = "a prototype RTLS system using decawave's dwm3000 chip and power of esp32"
license = "Copyright"
readme = "README.md"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.28.3", features = ["binstart"] }
embedded-svc = "0.15.4"
esp-idf-svc = "0.34.1"
esp-idf-hal = "0.30.0"
embedded-hal = "0.2"
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
smol = "1.2"
ssd1306 = "0.7"
# bindgen = "0.58.1"

[build-dependencies]
embuild = "0.27"
anyhow = "1"
bindgen = "0.58.1"
cc = "1.0.72"
# Future; might be possible once https://github.com/rust-lang/cargo/issues/9096 hits Cargo nightly:
#rust-esp32-ulp-blink = { git = "https://github.com/ivmarkov/rust-esp32-ulp-blink", artifact = "bin" }
